env dosyaları, çeşitli düzenlemeler