@@ -1,41 +1,67 @@
 package com.bekdik.examer.controller;
 
+import static com.bekdik.examer.service.domain.solvable.StringStringSolvableChoosable.getDummyStringStringSolvableChoosable;
+import static org.hamcrest.Matchers.hasSize;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
+import java.util.Arrays;
 import java.util.List;
 
+import com.bekdik.examer.service.domain.solvable.SolvableProvider;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Test;
+import org.mockito.ArgumentCaptor;
+import org.mockito.Captor;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
+
+
+import static org.mockito.BDDMockito.given;
+import static org.mockito.BDDMockito.then;
+import static org.mockito.Mockito.when;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.put;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 import com.bekdik.examer.service.domain.solvable.AbstractChoosable;
 import com.bekdik.examer.service.domain.solvable.StringChoosable;
 import com.bekdik.examer.service.domain.solvable.StringStringSolvableChoosable;
+import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.http.MediaType;
+import org.springframework.test.context.junit.jupiter.web.SpringJUnitWebConfig;
+import org.springframework.test.web.servlet.MockMvc;
 
-@SpringBootTest
+import static org.mockito.Mockito.reset;
+
+@WebMvcTest(SolvableController.class)
 public class SolvableControllerTest {
+    @MockBean
+    SolvableProvider solvableProvider;
+    @Autowired
+    MockMvc mockMvc;
 
-private SolvableController solvableController;
-public SolvableControllerTest(@Autowired SolvableController solvableController) {
-	this.solvableController=solvableController;
-}
+    @Test
+    public void testGetDefaultSolvables() throws Exception {
 
-@Test
-public void testIfAnswerCorrect() {
-	final String correctAnswer="test cevabı";
-	final String wrongAnswer="yanlış test cevabı";
-	StringStringSolvableChoosable stringSolvableChoosable;
-	try {
-		stringSolvableChoosable = new StringStringSolvableChoosable(100, "test sorusu", correctAnswer, new StringChoosable(List.of(correctAnswer,"başka test seçeneği"), "test cevabı"));
-		solvableController.getDefaultSolvables().add(stringSolvableChoosable);
-		assertTrue(solvableController.answer(stringSolvableChoosable.getId(),correctAnswer));
-		assertFalse(solvableController.answer(stringSolvableChoosable.getId(),wrongAnswer));
-	} catch (Exception e) {
-		// TODO Auto-generated catch block
-		e.printStackTrace();
-	}
-	
-}
+        StringStringSolvableChoosable stringSolvableChoosable = getDummyStringStringSolvableChoosable();
+        given(solvableProvider.getSolvables()).willReturn(Arrays.asList(stringSolvableChoosable));
 
+        mockMvc.perform(get("/solvables")).andExpect(status().isOk()).andExpect(content().contentType(MediaType.APPLICATION_JSON)).andExpect(jsonPath("$", hasSize(1)));
+        then(solvableProvider).should().getSolvables();
+    }
+    @Test
+    public void testIfAnswerCorrect() throws Exception {
+        final String correctAnswer="test cevabı";
+        StringStringSolvableChoosable stringSolvableChoosable = getDummyStringStringSolvableChoosable();
+        given(solvableProvider.getSolvables()).willReturn(Arrays.asList(stringSolvableChoosable));
+
+        mockMvc.perform(put("/solvables/"+stringSolvableChoosable.getId()+"/answer/"+correctAnswer)).andExpect(status().isOk()).andExpect(content().contentType(MediaType.APPLICATION_JSON)).andExpect(content().string("true"));
+        then(solvableProvider).should().getSolvables();
+    }
+
+    @AfterEach
+    void tearDown() {
+        reset(solvableProvider);
+    }
 }
